fixed the spacing from % to px so things stay fixed and don't move 'round so much.
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-plugins/cf-post-meta/trunk@27347 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/css/cf-post-meta.css
+++ b/css/cf-post-meta.css
@@ -33,8 +33,8 @@
 	clear: both;
 }
 .cf_meta_kv label {
-	float:left;
-	width:24%;
+	float: left;
+	width: 218px;
 }
 .cf_meta_kv input,
 .cf_meta_kv textarea {
